k8s/apps/jellyfin/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - name: jellyfin-port
      port: 8096
