k8s/apps/jellyfin/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: jellyfin
spec:
  tls:
    - secretName: jellyfin-tls-secret
      hosts:
        - jellyfin.home.ruchij.com
  rules:
    - host: jellyfin.home.ruchij.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: jellyfin-service
                port:
                  name: jellyfin-port
